--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@alifd/biz-anchor": "^1.1.7",
     "@alifd/next": "^1.19.23",
+    "@alife/theme-fusion-site-2-0": "^0.9.2",
     "axios": "^0.19.2",
     "highlight-words-core": "^1.2.2",
     "moment": "^2.24.0",
@@ -41,5 +42,8 @@
     "name": "ExampleBlock",
     "title": "demo block",
     "category": "Information"
+  },
+  "buildConfig": {
+    "theme": "@alife/theme-fusion-site-2-0"
   }
 }
