--- a/themes/jinchan/package.json
+++ b/themes/jinchan/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ablula/blog-jinchan",
-  "version": "0.0.4-beta.1",
+  "version": "0.0.5",
   "description": "blog theme for ablula document",
   "files": [
     "src/",
