--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ablula/document-client",
-  "version": "0.2.7-beta.1",
+  "version": "0.2.7",
   "description": "intro block",
   "files": [
     "src/",
