--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ablula/document-client",
-  "version": "0.2.7",
+  "version": "0.2.8-beta.0",
   "description": "intro block",
   "files": [
     "src/",
@@ -39,8 +39,8 @@
     "react-dom": "^16.3.0"
   },
   "blockConfig": {
-    "name": "ExampleBlock",
-    "title": "demo block",
+    "name": "CustomYuqueWebClient",
+    "title": "自定义语雀 web 页面",
     "category": "Information"
   }
 }
