--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ablula/document-client",
-  "version": "0.2.8-beta.0",
+  "version": "0.2.8",
   "description": "intro block",
   "files": [
     "src/",
@@ -22,7 +22,7 @@
   "dependencies": {
     "@alifd/biz-anchor": "^1.1.7",
     "@alifd/next": "^1.19.23",
-    "@alifd/theme-2": "^0.4.4",
+    "@alifd/theme-ablula-document": "^0.2.0",
     "axios": ">=0.21.1",
     "highlight-words-core": "^1.2.2",
     "moment": "^2.24.0",
