--- a/themes/default/package.json
+++ b/themes/default/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ablula/document-client",
-  "version": "0.2.9-beta.2",
+  "name": "@alifd/document-client",
+  "version": "0.2.9-beta.3",
   "description": "intro block",
   "files": [
     "src/",
